# LAN-Only_online_meet

./: .gitattributes  .gitignore  AUDIO_BUTTON_AND_TRANSMISSION_FIXES.md  AUDIO_SCREEN_SHARING_FIXES.md  BUTTON_FLICKERING_FIXES.md  BUTTON_VISIBILITY_FIXES.md  CHANGELOG.md  CLIENT_JOIN_DEBUGGING_GUIDE.md  CLIENT_VIDEO_DISPLAY_AND_TRANSMISSION_FIXES.md  COMPREHENSIVE_DIAGNOSTIC_REPORT.md  CONNECTION_TROUBLESHOOTING.md  CONNECTION_TROUBLESHOOTING_GUIDE.md  CONTRIBUTING.md  ENHANCED_CONNECTION_INTERFACE.md  ERROR_FIXES_SUMMARY.md  FIXES_APPLIED.md  GIT_SETUP.md  INSTALLATION_TROUBLESHOOTING.md  LICENSE  LOCAL_VIDEO_PREVIEW_FEATURE.md  MANIFEST.in  MEETING_CONTROLS_AND_SCREEN_SHARING_ANALYSIS.md  MEETING_CONTROLS_FIXES.md  MIC_SPEAKER_SEPARATION.md  MULTI_CLIENT_FEATURES.md  MULTI_VIDEO_DISPLAY_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  SCREEN_SHARING_AND_UI_FIXES.md  SERVER_CLIENT_VIDEO_DISPLAY_FIXES.md  SERVER_STARTUP_FIX.md  TCP_TIMEOUT_AND_VIDEO_LABEL_FIXES.md  TECHNICAL_DOCUMENTATION.md  USAGE.md  VIDEO_AUDIO_TROUBLESHOOTING_ENHANCED.md  VIDEO_QUEUE_AND_DISPLAY_FIXES.md  VIDEO_TRANSMISSION_FIXES.md  architecture.md  client.py  debug_client.py  (+26 more)
client/: __init__.py  audio_client.py  chat_client.py  client.py  file_client.py  gui_client.py  main_client.py  video_client.py
docs/: README.md
examples/: README.md
gui/: FILE_PROTOCOL_FIXES.md  FINAL_CLIENT_FIXES.md  MANUAL_FILE_DETECTION.md  README.md  UPLOAD_FLOW_SUMMARY.md  WINDOWS_SETUP.md  __init__.py  check_system.py  client.py  client_gui.py  connection_test.py  fix_gui_appearance.py  host_gui.py  install.py  main_client.py  main_server.py  requirements-windows.txt  requirements.txt  screen_sharing_setup.md  server.py  server_gui.py  setup.md  simple_connection.py  start_client.py  start_server.py  test_file_protocol_fixes.py  test_heartbeat_fix.py  test_manual_files.py  test_upload_fix.py  test_upload_flow.py
gui/uploads/: manual_data.json  manual_test_1.txt  manual_test_2.md  test_manual_file.txt
myenv/: pyvenv.cfg
server/: __init__.py  file_server.py  gui_server.py  host_server.py  main_server.py  media_server.py  room_manager.py  server.py  user_manager.py
shared/: __init__.py  constants.py  protocol.py  utils.py
tests/: __init__.py
webserver/: CLIENT_CONNECTION_GUIDE.md  HOST_CONTROLS_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_SETUP.md  SESSION_FIX_SUMMARY.md  SESSION_ID_APPROACH.md  SESSION_TROUBLESHOOTING.md  SETUP_GUIDE.md  SIMPLIFIED_CONNECTION_GUIDE.md  SSL_README.md  TECHNICAL_DOCS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WEB_SETUP_GUIDE.md  add_media_test_button.js  analyze_host_vs_client.py  analyze_media_streaming_issue.py  app.py  automated_solution_summary.py  check_host_method.html  client.py  client_connect.bat  client_connect.py  client_connect.sh  client_media_troubleshoot.py  complete_https_solution.py  connect_client.py  cross_computer_test.py  debug_bidirectional_media.py  debug_host_audio.py  debug_ip_detection.py  debug_session_creation.py  debug_specific_join_issue.py  debug_test.py  debug_web_client.py  deploy.py  dynamic_solution_final.py  final_client_media_fix.py  fix_client_media_access.py  (+55 more)
webserver/ssl_certs/: server.crt  server.key
webserver/static/: meeting-finder.html
webserver/static/css/: session-ip-display.css  session.css  style.css
webserver/static/js/: main.js  session.js
webserver/templates/: audio-test.html  base.html  camera-test.html  chat-demo.html  client.html  client_simple.html  connection-test.html  debug-audio.html  host.html  host_simple.html  index.html  join.html  media-test.html  quick-join.html  session-discovery.html  session.html  simple-host.html  simple-join.html  test_socketio.html
